[gd_scene load_steps=2 format=3 uid="uid://7hw71s8tm4pj"]

[ext_resource type="Script" path="res://scenes/ui/weapon_upgrade_card.gd" id="1_wmba6"]

[node name="WeaponUpgradeCard" type="MarginContainer"]
custom_minimum_size = Vector2(150, 100)
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_wmba6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"

[node name="CostLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cost"

[node name="QuantityLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quantity / Max Quantity"

[node name="BuyButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Buy"
